# weave

./: .travis.yml  LICENSE  README.md  bnf.md  chaos.cabal  stack.yaml  weave.cabal
app/: Main.hs
examples/: action-declared.weave  action-not-declared.weave  bitcoin.weave  every.weave  in.chaos  operators.weave  services.weave
examples/frequency/: once.weave
examples/invalid/: junk.chaos
examples/operators/: pipe.weave
examples/valid/: action-declared.chaos  action-declared.weave  action-not-declared.weave  every.chaos  every.weave  in.chaos  in.weave  multiple-declared.chaos  multiple-declared.weave  operators.chaos  operators.weave  services.weave  url.chaos  url.weave
examples/valid/frequency/: once.weave
examples/valid/operators/: pipe.weave
src/: Lib.hs  Weave.hs
src/Data/Time/Schedule/: Chaos.hs
src/Data/Time/Schedule/Chaos/: Parser.hs  Tutorial.hs
src/Weave/: Parser.hs  Tutorial.hs  Types.hs
src/Weave/Network/: HTTP.hs
test/: ExamplesSpec.hs  LibSpec.hs  WeaveSpec.hs
test/Data/Time/Schedule/: ChaosSpec.hs  ExamplesSpec.hs
test/Data/Time/Schedule/Chaos/: ParserSpec.hs
test/Weave/: ParserSpec.hs
