name:                weave
version:             0.1.0.0
synopsis:            A DSL for event generation & integration
description:         A DSL for event generation & integration
homepage:            https://github.com/atcol/weave#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Collins
maintainer:          alex@alexcollins.email
copyright:           2017, 2018 Alex Collins
category:            API
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Weave, Weave.Parser, Weave.Tutorial, Weave.Types
  build-depends:       base >= 4.7 && < 5
                     , async
                     , aeson
                     , attoparsec
                     , text
                     , mtl
                     , pipes
                     , process
                     , protolude
                     , random
                     , time
                     , transformers
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                      , OverloadedStrings

executable weave
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , weave
                     , process
                     , protolude
                     , optparse-generic
                     , random
                     , time
  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                      , OverloadedStrings

test-suite weave-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       WeaveSpec, ExamplesSpec, Weave.ParserSpec
  build-depends:       base
                     , attoparsec
                     , directory
                     , hspec
                     , mtl
                     , protolude
                     , QuickCheck
                     , quickcheck-instances
                     , quickcheck-io
                     , random
                     , text
                     , time
                     , weave

  default-language:    Haskell2010
  default-extensions: NoImplicitPrelude
                      , OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/atcol/weave
